--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "license": "ISC",
   "type": "module",
   "dependencies": {
-    "@prisma/client": "^6.1.0",
+    "@prisma/client": "^6.15.0",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
@@ -21,6 +21,7 @@
     "http-errors": "^2.0.0",
     "jsonwebtoken": "^9.0.2",
     "nodemailer": "^6.9.16",
+    "prisma": "^6.15.0",
     "sharp": "^0.33.5",
     "stripe": "^17.7.0",
     "uuid": "^11.1.0",
